--- a/client/src/styles/SearchPage.css
+++ b/client/src/styles/SearchPage.css
@@ -5,9 +5,10 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  padding-top: 120px; /* clear fixed Header */
+  /* padding-top: 10vh; */
+  /* clear fixed Header */
 }
-.search-page::before {
+/* .search-page::before {
   content: "";
   position: fixed;
   top: 0;
@@ -15,14 +16,15 @@
   width: 100%;
   height: 100%;
   background-image: url("/gardens.jpeg");
-  background-position: center;
+  object-fit: cover;
+  background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
   z-index: 0;
-}
+} */
+
 .search-page > .sp-main {
   position: relative;
-  z-index: 1;
 }
 
 /* hide scrollbars */
@@ -40,7 +42,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background: #f9fafb;
+  background: #f3f3fc;
   color: #111827;
   font-family: "Helvetica Neue", Arial, sans-serif;
 }
@@ -53,6 +55,8 @@ body {
 
 /* Filter bar */
 .filter-bar-wrapper {
+  position: absolute;
+  top: -5%;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -61,30 +65,32 @@ body {
 
 /* Results */
 .sp-results {
+  margin: 2% auto;
   padding: 1rem 2rem;
+  width: 70%;
 }
 .hotel-card {
   display: flex;
   align-items: center;
   background: #fff;
   border: 1px solid #e5e7eb;
-  border-radius: 0.75rem;
-  padding: 1rem;
+  border-radius: 0.45rem;
   margin-bottom: 1rem;
   transition: box-shadow 0.2s;
+  height: 20vh;
 }
 .hotel-card:hover {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 }
 .hotel-img {
-  width: 120px;
-  height: 80px;
-  border-radius: 0.5rem;
+  border-radius: 0.45rem 0 0 0.45rem ;
   object-fit: cover;
-  margin-right: 1rem;
+  height: 100%;
+  width: 20%;
 }
 .hotel-info {
   flex: 1;
+  align-items: start;
 }
 .hotel-info h3 {
   margin: 0;
@@ -92,7 +98,6 @@ body {
 }
 .stars {
   color: #ffc107;
-  margin: 0.25rem 0;
 }
 .address,
 .distance {
