--- a/client/src/styles/HotelDetailPage.css
+++ b/client/src/styles/HotelDetailPage.css
@@ -1,13 +1,12 @@
 /* src/styles/HotelDetailPage.css */
 .hotel-detail-page {
-  position: relative;
+  /* position: relative; */
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
 }
 .hotel-filter {
   width: 100%;
-  max-width: 1000px;
   margin: 4rem 0 1.5rem;
 }
 .detail-header {
@@ -16,8 +15,7 @@
   padding: 1.5rem;
   border-radius: 0.5rem;
   width: 100%;
-  max-width: 1000px;
-  text-align: center;
+  text-align: start;
   margin-bottom: 2rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
 }
@@ -37,11 +35,11 @@
   font-size: 1.1rem;
 }
 .room-list {
-  width: 100%;
-  max-width: 1000px;
+  width: 75%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   gap: 1.5rem;
+  margin: auto;
 }
 .room-card {
   background: #fff;
@@ -92,4 +90,18 @@
   margin-top: 4rem;
   font-size: 1.2rem;
   color: #555;
+}
+
+#hotel_image{
+  height: 250px;
+  width: 50%;
+  object-fit: cover;
+}
+
+.accordion {
+  width: 85%;
+}
+
+.carousel-div{
+  min-height: 20vh;
 }
