--- a/client/src/styles/HotelDetailPage.css
+++ b/client/src/styles/HotelDetailPage.css
@@ -44,38 +44,30 @@
 .room-card {
   background: #fff;
   border-radius: 0.5rem;
-  overflow: hidden;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+  height: 45vh;
   display: flex;
   flex-direction: column;
 }
 .room-card img {
   width: 100%;
-  height: 180px;
   object-fit: cover;
 }
 .room-card h3 {
-  margin: 0.5rem;
+  margin-left: 0.5rem;
   font-size: 1.1rem;
   color: #333;
 }
 .room-card p {
-  flex: 1;
-  margin: 0 0.5rem;
-  color: #555;
-  font-size: 0.95rem;
-}
-.room-price {
-  font-weight: bold;
-  margin: 0.5rem;
   color: #222;
 }
+
 .btn.book-room {
   background: #0077cc;
   color: #fff;
   border: none;
   padding: 0.75rem;
-  margin: 0.5rem;
+  /* margin: 0.5rem; */
   border-radius: 0.375rem;
   cursor: pointer;
   text-align: center;
@@ -104,4 +96,16 @@
 
 .carousel-div{
   min-height: 20vh;
+}
+
+#room_img{
+  border-radius: 5px 5px 0  0;
+}
+
+.room-detail-box{
+  min-height: 10vh;
+}
+
+.overflow-hidden{
+  max-height: 8vh;
 }
