--- a/client/src/styles/HotelDetailPage.css
+++ b/client/src/styles/HotelDetailPage.css
@@ -16,7 +16,7 @@
   border-radius: 0.5rem;
   width: 100%;
   text-align: start;
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
 }
 .detail-header h1 {
