added loading animations and handled not logged in booking

--- a/client/src/styles/Bookmark.css
+++ b/client/src/styles/Bookmark.css
@@ -51,6 +51,11 @@
   transform: translateY(-4px);
 }
 
+.spinner{
+  height: 100px;
+  width: 100px;
+}
+
 /* =============================================================================
    Card Content
    ============================================================================= */
