--- a/client/src/styles/HotelDetailPage.css
+++ b/client/src/styles/HotelDetailPage.css
@@ -2,8 +2,15 @@
 .hotel-detail-page {
   /* position: relative; */
   display: flex;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
+  justify-content: center;
+}
+.hotel-skeleton {
+  width: 100%;
+  margin-bottom: 1rem;
 }
 .hotel-filter {
   width: 100%;
@@ -82,6 +89,11 @@
   margin-top: 4rem;
   font-size: 1.2rem;
   color: #555;
+}
+
+.spinner{
+  height: 100px;
+  width: 100px;
 }
 
 #hotel_image{
